docs: Complete documentation cleanup and README rewrite
- Remove all translation system files (hooks, scripts, tests, configs)
- Clean up docs directory while preserving structure
- Rewrite README.md with enterprise architecture focus
- Highlight core design principles: DDD, BDD, Viewpoints & Perspectives
- Document environment-specific testing strategy
- Update AWS CDK deployment information